# ipa_visual_free_space_detection

./: CMakeLists.txt  package.xml
cfg/: free_space_detection_node.cfg
common/include/: common.h  disp_image.h  histograms.h  line.h  lineDetection.h  matching.h
common/include/felzenszwalb/: disjoint-set.h  imutil.h
common/src/: common.cpp  detect_Jimenez.cpp  detect_UVdisp.cpp  disp_image.cpp  free_space_detection_node_common.cpp  histograms.cpp  lineDetection.cpp  mask_postprocessing.cpp  matching.cpp  sorting.cpp
free_space_detection/: CMakeLists.txt  README.md
free_space_detection/cfg/: free_space_detection_node.cfg
free_space_detection/common/include/: detect_Jimenez.h  detect_UVdisp.h  mask_postprocessing.h  sorting.h
free_space_detection/common/include/felzenszwalb/: convolve.h  filter.h  image.h  imconv.h  misc.h  pnmfile.h  segment-graph.h  segment-image.h
free_space_detection/common/src/: common.cpp  free_space_detection_node_common.cpp
free_space_detection/model/: free_space_detection.ros_package
free_space_detection/ros/src/: free_space_detection_node_ros.cpp
model/: free_space_detection.ros_package_diagram
ros/src/: free_space_detection_node_ros.cpp
