<?xml version="1.0"?>
<package>
  <name>ipa_visual_free_space_detection</name>
  <description>The free_space_detection package</description>
  <version>0.1.0</version>
  <maintainer email="srd@ipa.fhg.de">Stefan Dörr</maintainer>
  <author email="Manuela.Schuler@ipa.fraunhofer.de">Manuela Schuler</author>
  <license>Fraunhofer IPA</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>stereo_msgs</build_depend>
  <run_depend>stereo_msgs</run_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
